updated nginx config

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -6,7 +6,7 @@ import TeamGrid from "../components/sections/TeamGrid.astro";
 import heroBg from "../assets/InnerHero-bg.jpg";
 ---
 
-<BaseLayout>
+<BaseLayout title="Members">
     <InnerHero
         content={{
             title: "Meet the School Management",
